# raytracer2022

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.3c4ac75  README.md
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  camerawidget.cpp  camerawidget.h  mainwindow.cpp  mainwindow.h  performancelist.cpp  performancelist.h  propertiespanel.cpp  propertiespanel.h  renderer.cpp  renderer.h  rendererpropertieswidget.cpp  rendererpropertieswidget.h  res.qrc  titledfloattextedit.cpp  titledfloattextedit.h  tripplefloatinputwidget.cpp  tripplefloatinputwidget.h
src/engine/: CMakeLists.txt  defines.h
src/engine/core/: assert.h  logger.cpp  logger.h
src/engine/platform/: platform.h
src/examples/all-features-1/: CMakeLists.txt
src/examples/cornell-smoke/: CMakeLists.txt  main.cpp
src/examples/distant-view/: CMakeLists.txt  main.cpp
src/examples/earth-image/: CMakeLists.txt  main.cpp
src/examples/empry-cornell/: CMakeLists.txt  main.cpp
src/examples/engine-testbed/: CMakeLists.txt  main.cpp
src/examples/focus-scene/: CMakeLists.txt  main.cpp
src/examples/hollow-glass/: CMakeLists.txt  main.cpp
src/examples/marble-light/: CMakeLists.txt  main.cpp
src/examples/moving-spheres/: CMakeLists.txt  main.cpp
src/examples/noise/: CMakeLists.txt  main.cpp
src/examples/pbrt/: CMakeLists.txt  pbrt.cpp
src/examples/sandbox/: CMakeLists.txt  main.cpp
src/examples/shiny-metal/: CMakeLists.txt  main.cpp
src/examples/two-checkered-spheres/: CMakeLists.txt  main.cpp
src/examples/wide-angle-camera/: CMakeLists.txt  main.cpp
src/montecarlo/: CMakeLists.txt  main.cpp
src/raytracer/: CMakeLists.txt  raytracer.h
src/raytracer/accelerator/: aabb.cpp  aabb.h  pdf.cpp
src/raytracer/cameras/: camera.cpp  camera.h
src/raytracer/geometry/: differentialgeometry.cpp  differentialgeometry.h
src/raytracer/hittable/: aarect.cpp  aarect.h  box.cpp  box.h  bvh.cpp  bvh.h  constantmedium.cpp  constantmedium.h  flipface.cpp  flipface.h  hit_record.cpp  hit_record.h  hittable.h  hittable_transformations.cpp  hittable_transformations.h  hittablelist.cpp  hittablelist.h  movingsphere.cpp  movingsphere.h  sphere.cpp  sphere.h
src/raytracer/image/: stb_image.cpp
src/raytracer/integrators/: integrator.h  integrators.cpp
src/raytracer/lights/: light.h  lightbase.cpp  lightbase.h  pointlight.cpp  pointlight.h
src/raytracer/materials/: dielectric.cpp  dielectric.h  diffuselight.cpp  diffuselight.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
src/raytracer/materials/qb/: materialbase.cpp  materialbase.h  simplematerial.cpp  simplematerial.h
src/raytracer/noise/: perlin.cpp  perlin.h
src/raytracer/objects/: objectbase.cpp  objectbase.h  objplane.cpp  objplane.h  objsphere.cpp  objsphere.h
src/raytracer/pdf/: cosinepdf.cpp  cosinepdf.h  pdf.h
src/raytracer/primitives/: primitive.cpp  primitive.h
src/raytracer/raytracer/: base.h  image.cpp  image.h  intersection.cpp  intersection.h  ray.cpp  ray.h  renderer.cpp  renderer.h
src/raytracer/samplers/: sampler.cpp  sampler.h  stratifiedsampler.cpp  stratifiedsampler.h
src/raytracer/scene/: scene.cpp  scene.h
src/raytracer/shapes/: shape.cpp  shape.h  sphere.cpp  sphere.h
src/raytracer/spd/: coefficientspectrum.h  spectrum.cpp  spectrum.h
src/raytracer/textures/: checkertexture.cpp  checkertexture.h  imagetexture.cpp  imagetexture.h  noisetexture.cpp  noisetexture.h  solidcolor.cpp  solidcolor.h  texture.h
src/raytracer/transformations/: animatedtransform.cpp  animatedtransform.h  geometrictransform.cpp  geometrictransform.h  transformation.cpp  transformation.h
src/raytracer/utils/: glmutils.h  mathutils.h  orthonormalbasis.cpp  orthonormalbasis.h  timer.cpp  timer.h
src/runtime-quant/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  image.cpp  image.h  main.cpp  scene.cpp  scene.h  vec.h
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/raytracer/: ray_test.cpp
